[package]
name = "explora_auth_proxy"
version = "0.1.0"
edition = "2024"


[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http = "1.3.1"

http-body-util = "0.1"
bytes = "1"
dotenvy = "0.15.7"
hex = "0.4"
